--- a/prototype/package.json
+++ b/prototype/package.json
@@ -17,24 +17,25 @@
     "gulp-if": "^1.2.4",
     "gulp-ignore": "^1.2.0",
     "gulp-imagemin": "^0.6.2",
-    "gulp-jshint": "^1.12.0",
+    "gulp-jshint": "^2.0.4",
     "gulp-load-plugins": "^0.5.3",
     "gulp-minify-css": "^0.3.7",
     "gulp-minify-html": "^0.1.4",
-    "gulp-sass": "^2.1.0",
-    "gulp-size": "^1.0.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-size": "^2.1.0",
     "gulp-task-listing": "*",
     "gulp-uglify": "^0.3.1",
     "gulp-watch": "^0.6.9",
     "gulp-webserver": "^0.6.0",
     "gulp-zip": "^0.3.4",
     "gulp.spritesmith": "^6.0.0",
-    "jshint-stylish": "^0.4.0",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
     "main-bower-files": "^1.0.2",
     "merge-stream": "^1.0.0",
-    "node-sass": "^3.4.1",
+    "node-sass": "^4.5.3",
     "open": "^0.0.5",
-    "run-sequence": "^0.3.6"
+    "run-sequence": "^2.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
