--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,5 @@
 /.DS_Store
 /design
 /build
-!/build/themes/searchit
-!/build/themes/searchit/*
-!/build/plugins/searchit
-!/build/plugins/searchit/*
-/build/themes/searchit/content
-/build/themes/searchit/content/*
-/build/themes/searchit/meta
-/build/themes/searchit/meta/*
+!/build/wp-content/themes/atg
 !/.gitignore
